syntax = "proto3";

package server.user;

import "google/protobuf/timestamp.proto";

option go_package = "server/api/v1";

message MessageRequest {
  string ID = 1;
}

message MessagesResponse {
  repeated MessageResponse messages = 1;
}

message MessageResponse {
  string ID = 1;
  string Title = 2;
  string Content = 3;
  string AuthorID = 4;
  google.protobuf.Timestamp DisplayDate = 5;
}

service MessageController {
  rpc GetMessagesAfter(MessageRequest) returns (MessagesResponse) {}
}